<resources>
    <string name="app_name">SQLite</string>
    <string name="action_sign_in">Log in</string>
    <string name="registrar_usuario">Registrar</string>
    <string name="modificar_nota">MODIFICAR</string>
    <string name="consultar_lista_de_usuarios">CONSULTAR</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="limpiar">Limpiar</string>
    <string name="registrar">Registrar</string>
    <string name="dui">CARNET</string>
    <string name="nombre">NOMBRE</string>
    <string name="Buscar">BUSCAR</string>
    <string name="promedio">Promedio</string>
    <string name="nota">NOTA</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SQLite</string>
    <string name="nav_header_subtitle">com.sama.sqlite</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
