<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sama.sqlite.MainActivity"
   >

    <Button
        android:id="@+id/registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar_usuario"
        android:layout_above="@+id/ver_notas"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/ver_notas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificar_nota"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/consultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consultar_lista_de_usuarios"
        android:layout_below="@+id/ver_notas"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
         />
</RelativeLayout>
